<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/what_to_eat_hint" />

        <Button
            android:id="@+id/choose_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_it"
            android:visibility="gone" />

        <Button
            android:id="@+id/change_it"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/change_it"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>
